--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -f umd -w",
-    "test": "npm run build && node ./test/test.js",
+    "test": "npm run build && ex-test -d ./public -t ./test/test.js",
     "start": "npm-run-all --parallel server watch",
     "server": "serve public"
   },
@@ -30,16 +30,13 @@
     "@rollup/plugin-image": "2.1.1",
     "@rollup/plugin-node-resolve": "11.2.1",
     "@rollup/plugin-typescript": "8.3.0",
-    "excalibur": "0.24.5",
+    "excalibur": "0.25.0",
     "npm-run-all": "4.1.5",
     "rollup": "2.58.0",
     "rollup-plugin-styles": "3.14.1",
     "serve": "11.3.2",
     "tslib": "2.3.1",
     "typescript": "4.4.4",
-    "node-static": "0.7.11",
-    "pixelmatch": "5.2.1",
-    "pngjs": "6.0.0",
-    "puppeteer": "5.5.0"
+    "@excaliburjs/testing": "0.25.0"
   }
 }
