--- a/package.json
+++ b/package.json
@@ -20,23 +20,21 @@
     "template"
   ],
   "author": "Erik Onarheim",
-  "license": "ISC",
+  "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/excaliburjs/template-ts-rollup/issues"
   },
   "homepage": "https://github.com/excaliburjs/template-ts-rollup#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-image": "2.1.1",
-    "@rollup/plugin-node-resolve": "11.2.1",
-    "@rollup/plugin-typescript": "8.5.0",
+    "@rollup/plugin-image": "3.0.3",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-typescript": "11.1.6",
     "excalibur": "0.28.7",
     "npm-run-all2": "5.0.2",
-    "rollup": "2.79.1",
-    "rollup-plugin-styles": "4.0.0",
+    "rollup": "4.12.0",
     "serve": "14.2.1",
     "tslib": "2.6.2",
-    "typescript": "4.9.5",
+    "typescript": "5.3.3",
     "@excaliburjs/testing": "0.25.1"
   }
 }
