chore: update excalibur to v0.32.0

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/excaliburjs/template-ts-rollup#readme",
   "dependencies": {
-    "excalibur": "0.31.0"
+    "excalibur": "~0.32.0"
   },
   "devDependencies": {
     "@rollup/plugin-image": "3.0.3",
